--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "server": "json-server ./server.json -w",
     "test": "vitest run",
     "test:watch": "vitest"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.8",
+    "json-server": "^1.0.0-alpha.23",
     "lucide-react": "^0.360.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
